<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.settings.SettingsActivity"
    android:background="@color/dark_blue"
    android:orientation="vertical"
    >

    <!--<TextView-->
        <!--android:id="@+id/header"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="70dp"-->
        <!--android:text="@string/settings"-->
        <!--android:textColor="@color/white"-->
        <!--android:textStyle="bold"-->
        <!--android:gravity="center"-->
        <!--android:textSize="20sp"-->
        <!--/>-->

    <FrameLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        >

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/threeLines"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/three_lines"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            />

    </FrameLayout>

    <LinearLayout
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        >

        <Switch
            android:id="@+id/allowNotifications"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/allow_notifications"
            android:textAlignment="viewStart"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:layout_marginTop="12dp"
            android:textSize="15sp"
            />

        <Switch
            android:id="@+id/enableDataLimit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:text="@string/switch_data_limit"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:checked="true"
            />

        <TextView
            android:id="@+id/newDataLimit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/set_new_data_limit"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:paddingStart="30dp"
            android:gravity="center_vertical"
            android:layout_marginTop="12dp"
            />

        <LinearLayout
            android:id="@+id/raiseDataLimit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/raise_data_limit"
                android:paddingStart="30dp"
                android:gravity="bottom"
                android:textSize="15sp"
                android:textColor="@color/white"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/raise_data_subtext"
                android:layout_marginTop="5dp"
                />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>